Corrected artifactId and name

--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.minecarts</groupId>
   <version>1.0.2</version>
-  <artifactId>Bouncer</artifactId>
-  <name>Bouncer</name>
+  <artifactId>ObjectData</artifactId>
+  <name>ObjectData</name>
   <url>http://www.minecarts.com</url>
   <build>
       <resources>
